Ver.
--------------------------------
- Bugfix - Report cannot be validated twice by the same person (#146)

Ver. 4.12.2 - 2023-06-26
--------------------------------
- Feature - Station entity added (migration added)(#145)

Ver. 4.12.1 - 2023-06-26
--------------------------------
- Feature - Fix create sensor function, Id prop added to sensorDto (#145)

Ver. 4.12.0 - 2023-06-23
--------------------------------
- Feature - SensorService module added, event.camera events management, StationsAppService added (appsettings updated)(#145)

Ver. 4.11.4 - 2023-06-21
--------------------------------
- Feature - Centroid, Type and Id properties added to AlertDto (#144)

Ver. 4.11.0 - 2023-06-20
--------------------------------
- Feature - NotificationReceived and Alerts added (migration added) (#144)

Ver. 4.10.0 - 2023-06-16
--------------------------------
- Feature - Bus configuration based on settings and not on project name (app.config and appsettings to be updated)
- Feature - Map request type management added (migration added)(#143)

Ver. 4.9.1 - 2023-05-23
--------------------------------
- Bugfix - Fix MapRequest visibility by permission (#141)

Ver. 4.9.0 - 2023-05-22
--------------------------------
- Feature - Added Title prop to MapRequest (migration added)(#139)

Ver. 4.8.0 - 2023-05-18
--------------------------------
- Feature - ReportValidation added (migration added)(gamification actions to be imported)(#137)
- Feature - ReportRequest removed (migration added)(#138)

Ver. 4.7.1 - 2023-03-21
--------------------------------
- Bugfix - Fix UpdateProfile API for citizens (#135)
- Feature - Added API for downloading file from Importer (#136)

Ver. 4.7.0 - 2023-03-10
--------------------------------
- Bugfix - Fix GetAction sorting (#133)
- Feature - UncompletedUsers api added (initialize permissions) (#132)


Ver. 4.6.0 - 2023-02-27
--------------------------------