@@ -1,7 +1,6 @@
 ﻿using Ermes.Enums;
 using System;
 using System.Collections.Generic;
-using System.Text;
 
 namespace Ermes.Consumers.RabbitMq
 {
